[package]
name = "profile-views-badge"
version = "0.1.0"
authors = ["Tricked <72335827+SkyBlockDev@users.noreply.github.com>"]
edition = "2018"
license = "apache-2"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1.0.0"
worker = { git = "https://github.com/cloudflare/workers-rs", rev = "bff2e9ebd4561fde5d6c66a82450fe0f28515177" }
serde_json = "1.0.78"
badge-maker = "0.2.1"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
